# hud-hackathon

./: .env.example  .gitignore  README.md  benchmark_nearest_baseline.py  car_demo.jsx  car_layers.js  car_model.js  compare.html  comparison.jsx  env.py  export_cnn_training_data.py  export_mobility_world.py  greedy.html  index.html  main.jsx  make_results_charts.py  map.py  package-lock.json  package.json  precompute_orchestrator_world.py  pyproject.toml  requirements-hud.txt  rl.html  smoke_generators.py  tasks.py  test_generators.py  test_hud_mobility.py  vercel.json  vite.config.js
.vercel/: project.json
docs/: integration_notes.md  rl_backend.md
fleet_rl/: __init__.py  debug_viz.py  env.py  export.py  graph.py  ppo.py  routing.py  train_ppo.py  types.py
hud_hackathon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hud_mobility/: __init__.py  env.py  eval_local.py  planners.py  schemas.py  tasks.py  tools.py  train.py  world.py
jax_fleet/: __init__.py  cli.py  debug_viz.py  devices.py  dispatch_env.py  dispatch_tools.py  env.py  graph.py  gym_env.py  heuristics.py  observations.py  rich_renderer.py  routing.py  scene_export.py  spawns.py  types.py
mobility_sim/: __init__.py  generators.py
scripts/: train_manual_dispatch.py
tests/: test_fleet_rl_accuracy_plan.py  test_fleet_rl_env.py  test_fleet_rl_export_ppo.py  test_jax_fleet_dispatch_env.py  test_jax_fleet_env.py  test_jax_fleet_graph.py  test_jax_fleet_gym_env.py  test_jax_fleet_ppo_debug.py  test_jax_fleet_spawns.py  test_jax_fleet_training_stability.py
(+5 files in other folders)
