[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hud-hackathon"
version = "0.1.0"
description = "Headless JAX fleet repositioning backend beside the Deck.gl demo."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "jax",
  "flax",
  "hud-python>=0.6,<0.7",
  "optax",
  "orbax-checkpoint",
  "numpy",
  "scipy",
  "networkx",
  "matplotlib",
  "pillow",
  "pyglet",
  "pytest",
]

[project.optional-dependencies]
map = ["osmnx"]

[project.scripts]
jax-fleet = "jax_fleet.cli:main"
jax-fleet-live = "jax_fleet.gym_env:main"

[tool.setuptools.packages.find]
include = ["jax_fleet*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test_generators.py", "tests"]
